force-app/main/default/objects/PDRI__ComparisonView__c/PDRI__ComparisonView__c.object-meta.xml
<CustomObject>
    <label>Metadata Filter</label>
    <nameField>
        <label>Metadata Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>