force-app/main/default/objects/PDRI__ComparisonView__c/fields/PDRI__Active__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates this change template is active.</description>
    <inlineHelpText>Is this template active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>