force-app/main/default/objects/PDRI__ComparisonView__c/fields/PDRI__Default__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default metadata filter.</description>
    <inlineHelpText>Default to this comparison view for metadata deployments?</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>