force-app/main/default/objects/PDRI__ComparisonView__c/fields/PDRI__Description__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Description__c</fullName>
    <description>Metadata filter description.</description>
    <inlineHelpText>Description for the comparison view which</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>