force-app/main/default/objects/PDRI__ComparisonView__c/listViews/PDRI__All.listView-meta.xml
<ListView>
    <fullName>PDRI__All</fullName>
    <columns>NAME</columns>
    <columns>PDRI__Active__c</columns>
    <columns>PDRI__Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>